--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,7 +1,9 @@
 body {
     background-color: rgb(255, 255, 255);
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    background-color: beige;
 }
+
 
 .home-container {
     padding: 70px;
@@ -10,8 +12,9 @@ body {
     border-radius: 15px;
     max-width: 800px;
     margin: 20px auto;
-    
+   
 }
+
 
 .home-header {
     font-size: 28px;
@@ -21,22 +24,26 @@ body {
     color: #fff;
 }
 
+
 .home-content {
     text-align: center;
     margin-top: 20px;
     color: #fff;
 }
 
+
 .home-content p {
     font-size: 15px;
     line-height: 1.5;
 }
+
 
 .action-buttons {
     display: flex;
     justify-content: center;
     margin-top: 20px;
 }
+
 
 .home-button {
     padding: 10px 20px;
@@ -51,9 +58,11 @@ body {
     transition: background-color 0.3s ease;
 }
 
+
 .home-button:hover {
     background-color: #045411;
 }
+
 
 .add-reminder-container {
     max-width: 600px;
@@ -64,11 +73,16 @@ body {
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
 }
 
+
 .input-field {
     margin-bottom: 15px;
 }
+
 
 button {
     margin-top: 15px;
     width: 100%;
 }
+
+
+
